--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <script>
         function sendemail() {
             Email.send({
-                Host: "smtp.elasticemail.com",
+                Host: "smtp.gmail.com",
                 Username: "aarohip1165@gmail.com",
-                Password: "F8FD5A442D6A668573212897452B72A7089B",
+                Password: "Bank#456",
                 To: 'aarohip1165@gmail.com',
                 From: document.getElementById("email").value,
                 Subject: "New contact form enquiry",
